# NabLab

./: .gitignore
plugins/fr.cea.nabla.cpplib/src/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/linearalgebra/linearalgebrakokkos/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/nablalib/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/nablalib/metis-5.1.0/: CMakeLists.txt
plugins/fr.cea.nabla.cpplib/src/nablalib/nablalib/mesh/: CartesianMesh2D.cc  CartesianMesh2D.h  CartesianMesh2DFactory.cc  CartesianMesh2DFactory.h  CartesianPartition2D.h  CartesianPartitionMesh2D.cc  MeshGeometry.h  NodeIdContainer.h  PvdFileWriter2D.cc  PvdFileWriter2D.h
plugins/fr.cea.nabla.cpplib/src/nablalib/nablalib/types/: BoundedArray.cc  BoundedArray.h  MultiArray.cc  MultiArray.h  Types.h
plugins/fr.cea.nabla.cpplib/src/nablalib/nablalib/utils/: OMPTarget.h  Timer.h  Utils.h  Vector.h
plugins/fr.cea.nabla.cpplib/src/nablalib/nablalib/utils/pnm/: Makefile  pnm.c  pnm.h  test.c
plugins/fr.cea.nabla.cpplib/src/nablalib/nablalib/utils/stl/: Parallel.h
plugins/fr.cea.nabla.edit/: plugin.properties
plugins/fr.cea.nabla.ir/: .classpath  build.properties
plugins/fr.cea.nabla.ir/model/: Ir.ecore  Ir.genmodel
plugins/fr.cea.nabla.ui/: build.properties
plugins/fr.cea.nabla.ui/examples/: .gitignore
plugins/fr.cea.nabla.ui/examples/NabLabExamples/: test.bash
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src-gen-java/explicitheatequation/: ExplicitHeatEquation.java
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src-gen-java/glace2d/: Glace2d.java
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src-gen-java/heatequation/: HeatEquation.java
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src-gen-java/implicitheatequation/: ImplicitHeatEquation.java
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src-gen-java/iterativeheatequation/: IterativeHeatEquation.java
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src/explicitheatequation/: ExplicitHeatEquation.ngen
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src/glace2d/: Glace2d.ngen
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src/heatequation/: HeatEquation.ngen
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src/implicitheatequation/: ImplicitHeatEquation.ngen
plugins/fr.cea.nabla.ui/examples/NabLabExamples/src/iterativeheatequation/: IterativeHeatEquation.ngen
plugins/fr.cea.nabla/nablalib/: linearalgebra.ngen
plugins/fr.cea.nabla/src/fr/cea/nabla/: Nablagen.xtext
(+137 files in other folders)
